<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="@dimen/editTextPading"
    android:background="@drawable/heating_item"
    android:padding="@dimen/editTextPading">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/editTextTextSize"
            android:text="@string/temperature"
            android:layout_gravity="left|center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:text="@string/t_boiler"/>

                <TextView
                    android:id="@+id/t_boiler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:layout_marginLeft="@dimen/lamp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:text="@string/t_obratka"/>

                <TextView
                    android:id="@+id/t_obratki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:layout_marginLeft="@dimen/lamp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:text="@string/t_out"/>

                <TextView
                    android:id="@+id/t_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:layout_marginLeft="@dimen/lamp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:text="@string/t_floor"/>

                <TextView
                    android:id="@+id/t_floor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/smallText"
                    android:layout_marginLeft="@dimen/lamp"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center"
        android:layout_weight="2"
        android:src="@drawable/gradus"/>

</LinearLayout>