<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="12"
    android:orientation="vertical"
    android:layout_margin="@dimen/editTextPading"
    android:background="@drawable/heating_item"
    android:padding="@dimen/editTextPading">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_marginRight="@dimen/vertical_margin"
            android:textSize="@dimen/smallText"
            android:text="@string/timeOutIn"/>

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:layout_marginRight="@dimen/vertical_margin"
            android:textSize="@dimen/smallText"
            android:text="@string/timeOutOut"/>

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_marginRight="@dimen/vertical_margin"
            android:textSize="@dimen/smallText"
            android:text="@string/timeOutComment"/>

        <Space
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Space
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

        <ListView
            android:id="@+id/timeOutList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"/>

</LinearLayout>