<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/editTextPading"
    android:background="@drawable/heating_item"
    android:padding="@dimen/editTextPading">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/editTextTextSize"
        android:text="@string/powerRegulation"
        android:layout_gravity="left|center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1000"
            android:textSize="@dimen/smallText"
            android:text="@string/autoPowerRegulation"
            android:layout_gravity="left|center"/>

        <CheckBox
            android:id="@+id/autoPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_weight="1"
            android:clickable="false"
            android:onClick="onCheckAutoPower" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/lamp1"
            android:layout_width="@dimen/powerLampWidth"
            android:layout_height="@dimen/powerLampHeigh"
            android:layout_margin="@dimen/lineSize"
            android:src="@drawable/heating_power_lamp_no"/>

        <ImageView
            android:id="@+id/lamp2"
            android:layout_width="@dimen/powerLampWidth"
            android:layout_height="@dimen/powerLampHeigh"
            android:layout_margin="@dimen/lineSize"
            android:src="@drawable/heating_power_lamp_no"/>

        <ImageView
            android:id="@+id/lamp3"
            android:layout_width="@dimen/powerLampWidth"
            android:layout_height="@dimen/powerLampHeigh"
            android:layout_margin="@dimen/lineSize"
            android:src="@drawable/heating_power_lamp_no"/>

        <ImageView
            android:id="@+id/lamp4"
            android:layout_width="@dimen/powerLampWidth"
            android:layout_height="@dimen/powerLampHeigh"
            android:layout_margin="@dimen/lineSize"
            android:src="@drawable/heating_power_lamp_no"/>

        <ImageView
            android:id="@+id/lamp5"
            android:layout_width="@dimen/powerLampWidth"
            android:layout_height="@dimen/powerLampHeigh"
            android:layout_margin="@dimen/lineSize"
            android:src="@drawable/heating_power_lamp_no"/>

        <ImageView
            android:id="@+id/lamp6"
            android:layout_width="@dimen/powerLampWidth"
            android:layout_height="@dimen/powerLampHeigh"
            android:layout_margin="@dimen/lineSize"
            android:src="@drawable/heating_power_lamp_no"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/manualPowerRegulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/editTextRadius"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smallText"
            android:text="@string/manualPowerRegulation"
            android:layout_gravity="left|center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"/>

            <SeekBar
                android:id="@+id/kvSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="6" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>